<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        
        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/new_game"
            android:background="@drawable/btn_bg" />
    
        <Button
            android:id="@+id/fight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/fight"
            android:background="@drawable/btn_bg" />
    
        <Button
            android:id="@+id/conn_fight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/fight_connection"
            android:background="@drawable/btn_bg" /> 

    </LinearLayout>
</RelativeLayout>